--- a/android/app/src/main/res/xml/keyboard_layout.xml
+++ b/android/app/src/main/res/xml/keyboard_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:android="http://schemas.android.com/apk/res/android"69
     android:keyWidth="10%p"
     android:horizontalGap="0px"
     android:verticalGap="0px"
